<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cronos</string>
    <string name="hello_world">Hello world!</string>
    <string name="powered_by">Desenvolvido por VilaVerde Sistemas.</string>
    <string name="description_img_splashscreen">Imagem Logo do Desenvolvedor.</string>
    <string name="description_img_splashscreen2">Imagem Logo Cliente.</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="cancel">Cancelar</string>
    <string name="ok">OK</string>

    <!-- Menu MainActivity -->
    <string name="menu_settings">Configurações</string>
    <string name="menu_pedidos">Pedidos</string>
    <string name="atualizar">Atualizar</string>
    <string name="sair">Sair</string>
    <string name="novo_pedido">Novo Pedido</string>
    <string name="clientes">Clientes</string>
    <string name="novo_cliente">Adicionar Cliente</string>
    <string name="listar_cliente">Listar Clientes</string>
    <string name="cadastro_de_clientes">Cadastro de Clientes</string>
    <string name="nome_razao_social">Nome / Razão Social:</string>
    <string name="cpf_cnpj">CPF / CNPJ:</string>
    <string name="rg_ie">RG / IE:</string>
    <string name="telefone_fixo">Telefone Fixo:</string>
    <string name="telefone_movel">Telefone Movel:</string>
    <string name="title_activity_pedido_aberto">Pedido</string>
    <string name="action_settings">Settings</string>
    <string name="selecione_cliente">Selecione um Cliente</string>

    <!-- Menu PEDIDOS -->
    <string name="menu_excluir_pedido">Excluir Pedido</string>
    <string name="menu_finalizar_pedido">Finalizar Pedido</string>

    <!-- LABELS PEDIDOS DETALHES -->
    <string name="lblCliente">Cliente</string>
    <string name="lblTotal">Total</string>
    <string name="lblItens">Itens</string>
    <string name="lblFormaPagamento">Forma de Pagamento:</string>
    <string name="lblNotaFiscalEletronica">Nota Fiscal Eletronica?</string>
    <string name="lblObservacoesPedido">Observações</string>
    <string name="lblParcelamento">Parcelamento</string>

    <!-- PEDIDO PRODUTOS GRID HEADERS -->
    <string name="colheaderCodigo">Código</string>
    <string name="colheaderDescricao">Descrição</string>
    <string name="colheaderQuantidade">Quantidade</string>
    <string name="colheaderValor">Valor</string>
    <string name="colheaderValorTotal">Valor Total</string>

    <!-- BOTOES -->
    <string name="btn_ok">OK</string>
    <string name="btn_salvar">Salvar</string>
    <string name="btn_voltar">Voltar</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="btn_adicionar">Adicionar</string>
    <string name="btn_local">Local</string>
    <string name="btn_remota">Remota</string>
    <string name="title_activity_cliente_search">Selecine um Cliente</string>
    <string name="title_activity_pedidos_list">Lista de Pedidos</string>
    <string name="title_activity_pedidos_view">Pedido</string>

    <!-- RADIO BUTTONS -->
    <string name="rbtDinheiro">Dinheiro</string>
    <string name="rbtCartaoCredito">Cartão de Credito</string>
    <string name="rbtCheque">Cheque</string>
    <string name="rbtBoleto">Boleto</string>
    <string name="rbt1x">1x</string>
    <string name="rbt2x">2x</string>
    <string name="rbt3x">3x</string>
    <string name="rbt4x">4x</string>
    <string name="rbt5x">5x</string>

    <!-- ATUALIZACAO -->
    <string name="semConexaoTitulo">Não é possivel estabelecer conexão com o servidor</string>
    <string name="semConexaoDescricao">Verifique sua conexão de rede e tente novamente.</string>
    <string name="tipoConexaoTitulo">Tipo Conexão?</string>
    <string name="tipoConexaoDescricao"><b>Local:</b> Apenas quando estiver na rede interna da empresa.\n<b>Remota:</b> Quando estiver usando 3G ou qualquer outra rede.\n\n<b>Dica:</b> Se estiver na rede local ela será mais rápida que a remota.</string>

    <!-- CONFIGURACAO -->
    <string name="setting_title">Configurações</string>
    <string name="setting_category_servidor">Servidor</string>
    <string name="setting_servidor_localhost">Host Local</string>
    <string name="setting_servidor_localhost_summary">Host para conexão local com o servidor.\nEx: 192.168.0.200</string>
    <string name="setting_servidor_remotahost">Host Remoto</string>
    <string name="setting_servidor_remotahost_summary">Host para conexão remota com o servidor.\nEx: dominioservidor.com:8081</string>
    <string name="setting_vendedor_id">Código Vendedor</string>
    <string name="setting_vendedor_id_summary">Código Interndo do Vendedor, de acordo com o que está cadastrado no servidor.</string>
    <string name="title_produto_list">Produtos</string>
    <string name="title_produto_detail">Produto Detail</string>

</resources>