<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item android:id="@+id/menu_cliente_lista"
          android:icon="@drawable/ic_menu_lista_clientes"
          android:title="@string/clientes"
          android:showAsAction="ifRoom|withText" >
    </item>
    <item android:id="@+id/menu_novo_pedido"
          android:icon="@drawable/ic_menu_lista_clientes"
          android:title="Pedido"
          android:showAsAction="ifRoom|withText" >
    </item>    
    <item android:id="@+id/menu_produtos"
          android:title="Produtos"
          android:showAsAction="ifRoom|withText" >
    </item>        
    
    <item android:id="@+id/novo_pedido" android:title="@string/novo_pedido"></item>
    <item android:id="@+id/clientes" android:title="@string/clientes"></item>
    <item android:id="@+id/menu_atualizar" android:title="@string/atualizar"></item>
    <item android:id="@+id/menu_configuracao" android:title="@string/menu_settings"></item>
    <item android:id="@+id/sair" android:title="@string/sair"></item>
    
</menu>